discussion/kv_engine/175088/175088_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Modernize parse_config interface char* to std::string

Change-Id: I46b9b7200b9c9850f2a50f49ab0791b52a63d980

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-05-23 08:39:21.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-23 09:00:06.000000000
Message: 
Patch Set 4:

(1 comment)
File Comment: /PATCHSET_LEVEL -> Wouldn't it be better to just replace this with JSON.... 
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-23 09:07:39.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20430/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20430/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16666/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/utilities/config_parser.cc b/utilities/config_parser.cc
index e2a8422a7..d70353559 100644
--- a/utilities/config_parser.cc
+++ b/utilities/config_parser.cc
@@ -75,7 +75,7 @@ static int trim_copy(
     return ret;
 }
 
-int parse_config(std::string conf, struct config_item *items, FILE *error) {
+int parse_config(std::string conf, struct config_item* items, FILE* error) {
     const char* end;
     char key[80];
     char value[1024];

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16666/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17642/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:23: error: no type named "string" in namespace "std" [clang-diagnostic-error]
int parse_config(std::string conf, struct config_item items[], FILE* error);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:36: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
int parse_config(std::string conf, struct config_item items[], FILE* error);
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_server.cc:128:30: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                             struct config_item items[],
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17642/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:23:
error: no type named "string" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17642/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38904/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/memcached/config_parser.h:66:23:
error: no type named "string" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38904/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18617/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18617/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46299/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7354/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19764/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27813/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7253/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19413/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:11:47.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

No Builds Executed
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-05-23 11:52:38.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> ðŸ‘
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-23 10:03:22.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> CreateBucket is always sent from the local ns_server to the local memcached
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-05-23 09:58:34.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> I don't have a problem with this conceptually, be I do feel it's beyond the scope of this patch. We should spin it out into a different MB. Also is there any possibility of this change causing backwards compatibility issues at upgrade?
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-05-23 09:09:17.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> The string contains the EPEngine extra args config, it's not a json object. Instead it's ';' separated list of key value pairs.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-23 09:29:26.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> I know; I wrote it ;) But wouldn't it be better to just replace the entire thing with JSON (now that we've got it).. 

Initially we create-bucket may just generate the json; then we can get ns-server to send us JSON...
----------------------------------------------------------------------------------------------------------------------
